@@ -1,6 +1,8 @@
 v3.7.1-rc.1 (XXXX-XX-XX)
 ------------------------
 
+* Fix potential AQL query shutdown hanger.
+
 * Use smarter default value preset in web UI for replication factor in case
   there are constraints established for the replication factor by the startup
   options `--cluster.min-replication-factor` and
